part4/project-app/manifests/broadcaster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-app-broadcaster
spec:
  replicas: 6
  selector:
    matchLabels:
      app: dwk-project-app-broadcaster
  template:
    metadata:
      labels:
        app: dwk-project-app-broadcaster
    spec:
      containers:
        - name: dwk-project-app-broadcaster
          image: dwk-project-app-broadcaster-image
