part4/project-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project-app
  template:
    metadata:
      labels:
        app: dwk-project-app
    spec:
      volumes:
        - name: dwk-volume
          persistentVolumeClaim:
            claimName: dwk-volume-claim
      containers:
        - name: dwk-project-app-frontend
          image: dwk-project-app-frontend-image
          volumeMounts:
            - name: dwk-volume
              mountPath: /app/files
          # resources:
          #   requests:
          #     cpu: 100m
          #   limits:
          #     cpu: 250m
          #     memory: 250Mi
        - name: dwk-project-app-backend
          image: dwk-project-app-backend-image
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3004
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            httpGet:
               path: /healthz
               port: 3004
          # resources:
          #   requests:
          #     cpu: 100m
          #   limits:
          #     cpu: 500m
          #     memory: 500Mi
