part4/project-app/manifests/db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todos-db
spec:
  selector:
    matchLabels:
      app: todos-db
  serviceName: todos-db
  replicas: 1
  template:
    metadata:
      labels:
        app: todos-db
    spec:
      containers:
        - name: todos-db
          image: postgres:13.4
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
  volumeClaimTemplates:
    - metadata:
        name: todos-db-data-claim
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todos-db
spec:
  selector:
    app: todos-db
  clusterIP: None
  ports:
    - port: 5432
