part4/project-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-project-app
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: dwk-project-app
            port:
             number: 80
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: dwk-project-app
            port:
             number: 1337
